# BeamNG-Experimentation

./: .gitignore  README.md  pyproject.toml
configs/: session_6cam_nuscenes.yaml  session_starter.yaml
src/beamng_harness/: __init__.py  cli.py  config.py  dataset.py  geometry.py  recorder.py  rig.py  session.py
src/beamng_harness/export/: __init__.py  colmap.py  nuscenes.py
src/beamng_harness/viz/: __init__.py  live.py  replay.py
