[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beamng-sensor-harness"
version = "0.1.0"
description = "Multi-modal sensor harness for BeamNG.tech: synchronized camera/LiDAR/depth/pose capture with COLMAP and nuScenes-style export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pranav Yadav"}]
dependencies = [
    "beamngpy>=1.35",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
viz = ["rerun-sdk>=0.20", "matplotlib>=3.8"]
dev = ["pytest>=8.0"]

[project.scripts]
beamng-harness = "beamng_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
